# Quiz_Game-V3

./: README.md  app.py  generateQuestion.py  logger_config.py  pyproject.toml  quiz_questions.json  requirements.txt  utils.py
agents/: EvaluationAgent.py  QuestionAgent.py
migrations/versions/: 016ecc59f2be_made_relational_database.py  11f32d9b02d4_fixed_the_types_of_question_table.py  4510facb06c4_fix_user_id_type.py  be0d98b38eb7_added_credits_system_in_users.py
route/: auth.py  payment.py
schemas/: question.py  quiz_session.py  user.py
static/css/: auth.css  base.css  evaluation.css  home.css  notifications.css  payment.css  quiz.css  quizMCQ.css  quizTEXT.css  score.css  style.css
static/js/: app.js  quiz.js  quiz_questions.js  theme.js
templates/: auth.html  error.html  evaluation.html  index.html  login.html  payment.html  quiz.html  quizMCQ.html  quizTEXT.html  score.html  signup.html
test/: test_connections.py
utils/: session_management.py  token_mangement.py
