[project]
name = "quiz-game-v3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.3.0",
    "flask>=3.1.2",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "markdown>=3.10",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
