[project]
name = "quiz-game-v3"
version = "0.1.0"
description = "AI powered quiz game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "bleach>=6.3.0",
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "markdown>=3.10",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "razorpay>=2.0.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "uuid>=1.30",
]
